main page 애니메이션 완성

--- a/index.html
+++ b/index.html
@@ -13,17 +13,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
   <link rel="stylesheet" href="./css/style.css" />
+
+  <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
+    integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script defer src="./js/main.js"></script>
 </head>
 
 <body>
   <main id="main">
     <div class="inner">
+      <img src="./img/eunbin_light.png" alt="smart eunbin" class="img fade-in me-smart" />
+
       <h1 id="who-am-i"><em>Who am I ?</em></h1>
-      <p id="hello">
+      <p class="fade-in" id="hello">
         안녕하세요.<br>
         능동적인 <strong>웹 퍼블리셔</strong>를 지향하는<br>
         이은빈입니다.
       </p>
+
+      <img src="./img/eunbin_hi.png" alt="Hi" class="img fade-in me-shake" />
+
     </div>
   </main>
 </body>
