--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
 </head>
 
 <body>
-  <main id="main">
+  <main id="main1">
     <div class="inner">
-      <img src="./img/eunbin_light.png" alt="smart eunbin" class="img fade-in me-smart" />
+      <img src="./img/eunbin_light.png" alt="smart eunbin" class="img fade-in floating me-smart" />
 
-      <h1 id="who-am-i"><em>Who am I ?</em></h1>
-      <p class="fade-in" id="hello">
+      <h2 id="who-am-i"><em>Who am I ?</em></h2>
+      <h1 class="fade-in" id="hello">
         안녕하세요.<br>
         능동적인 <strong>웹 퍼블리셔</strong>를 지향하는<br>
         이은빈입니다.
-      </p>
+      </h1>
 
-      <img src="./img/eunbin_hi.png" alt="Hi" class="img fade-in me-shake" />
+      <img src="./img/eunbin_hi.png" alt="Hi" class="img fade-in floating me-shake" />
 
     </div>
   </main>
+
+  <main id="main2"></main>
 </body>
 
 </html>
