--- a/index.html
+++ b/index.html
@@ -8,20 +8,31 @@
   <title>이은빈 포트폴리오</title>
   <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" />
 
+  <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic&family=Roboto&display=swap"
+    rel="stylesheet">
+  <!-- reset css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
+
   <link rel="stylesheet" href="./css/style.css" />
 
+  <!-- typeit -->
   <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
+  <!-- gsap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
     integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- scrollMagic -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+
   <script defer src="./js/main.js"></script>
 </head>
 
 <body>
+  <!-- MAIN1: title -->
   <main id="main1">
     <div class="inner">
       <img src="./img/eunbin_light.png" alt="smart eunbin" class="img fade-in floating me-smart" />
@@ -35,6 +46,34 @@
 
       <img src="./img/eunbin_hi.png" alt="Hi" class="img fade-in floating me-shake" />
 
+    </div>
+  </main>
+
+
+  <!-- MAIN2: about me -->
+  <main id="about-me">
+    <div class="inner">
+      <h2 class="title">About me</h2>
+
+      <article id="introduction">
+
+        <img src="./img/about_me.png" alt="eunbin - self introduction" id="about-img" />
+
+        <section class="contents">
+          <p>
+            안녕하세요! 신입 웹 퍼블리셔 이은빈입니다.
+            저는.. 어쩌구 저쩌구 희망..
+            재미있고.. 발전 가능성 있는..
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita beatae unde iste quasi consectetur
+            officiis perferendis earum possimus architecto praesentium!
+
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab quo nobis aspernatur? Tempore at odit
+            numquam iure nulla deserunt temporibus iste dignissimos aperiam velit, nobis placeat atque amet blanditiis.
+            Accusantium natus voluptatum quidem, possimus numquam laboriosam maxime ex non!
+          </p>
+        </section>
+
+      </article>
     </div>
   </main>
 
