contact, footer 완료

--- a/index.html
+++ b/index.html
@@ -51,33 +51,60 @@
 
 
   <!-- MAIN2: about me -->
-  <main id="about-me">
+  <main id="profile">
     <div class="inner">
-      <h2 class="title">About me</h2>
+      <article class="profile__introduce">
 
-      <article id="introduction">
+        <img src="./img/profile.png" alt="eunbin profile" class="profile-img" />
+        <h3>이은빈 (만 23세)</h3>
+        <div class="job">신입 웹 퍼블리셔</div>
 
-        <img src="./img/about_me.png" alt="eunbin - self introduction" id="about-img" />
+        <span class="comment">
+          " 뭐~라고 한 줄을 쓸까나~~~~~~ "
+        </span>
 
-        <section class="contents">
-          <p>
-            안녕하세요! 신입 웹 퍼블리셔 이은빈입니다.
-            저는.. 어쩌구 저쩌구 희망..
-            재미있고.. 발전 가능성 있는..
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita beatae unde iste quasi consectetur
-            officiis perferendis earum possimus architecto praesentium!
-
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab quo nobis aspernatur? Tempore at odit
-            numquam iure nulla deserunt temporibus iste dignissimos aperiam velit, nobis placeat atque amet blanditiis.
-            Accusantium natus voluptatum quidem, possimus numquam laboriosam maxime ex non!
-          </p>
+        <section class="profile__section">
+          <div class="title">title</div>
+          <div class="contents">내요오오옹</div>
         </section>
 
+        <section class="profile__section">
+          <div class="title">title</div>
+          <div class="contents">내요오오옹</div>
+        </section>
+
+        <section class="profile__section">
+          <div class="title">title</div>
+          <div class="contents">내요오오옹</div>
+        </section>
       </article>
     </div>
   </main>
 
-  <main id="main2"></main>
+
+  <!-- contact page -->
+  <main id="contact">
+    <div class="inner">
+      <h2 class="subject">CONTACT</h2>
+      <div class="contact__comment">
+        저의 포트폴리오를 봐주셔서 감사합니다.<br>
+        저와 이야기를 나눠보고 싶으시다면<br>
+        <div class="mail"><strong>dmsqlsdl54@naver.com</strong></div>
+        으로 연락 주시면 2일 내에 답장 드리겠습니다.<br>
+      </div>
+      <img src="./img/contact.png" alt="contact me" />
+    </div>
+  </main>
+
+
+  <!-- footer -->
+  <footer>
+    <div class="inner">
+      <span class="footer__copyright">
+        Copyright &copy; <span class="year"></span>. EUNBIN LEE All rights reserved.
+      </span>
+    </div>
+  </footer>
 </body>
 
 </html>
