--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
 </head>
 
 <body>
-  <!-- MAIN1: title -->
-  <main id="main1">
+  <!-- MAIN1: first page -->
+  <main id="first-page">
     <div class="inner">
 
       <img src="./img/eunbin_light.png" alt="smart eunbin" class="img fade-in floating me-smart" />
 
       <h2 id="who-am-i"><em>Who am I ?</em></h2>
+      <!-- 문구는 더 생각해보자 -->
       <h1 class="fade-in" id="hello">
         안녕하세요.<br>
         능동적인 <strong>웹 퍼블리셔</strong>를 지향하는<br>
@@ -49,25 +50,33 @@
 
       <img src="./img/eunbin_hi.png" alt="Hi" class="img fade-in floating me-shake" />
 
-    </div>
+      <header id="menu__icon">
+        <span class="material-icons">
+          menu
+        </span>
+      </header>
 
-    <header id="menu__icon">
-      <span class="material-icons">
-        menu
-      </span>
-    </header>
+    </div>
 
     <nav id="side__menu" class="hidden">
       <ul>
         <span class="material-icons">
           clear
         </span>
-        <li>About</li>
+        <li>Profile</li>
         <li>Projects</li>
         <li>Contact</li>
       </ul>
     </nav>
 
+  </main>
+
+
+  <!-- MAIN2: profile -->
+  <main id="profile-page">
+    <div class="inner">
+
+    </div>
   </main>
 </body>
 
