profile 완성(반응형까지

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
   <!-- material symbols -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/bf10c4ec2a.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="./css/style.css" />
 
@@ -72,10 +74,126 @@
   </main>
 
 
-  <!-- MAIN2: profile -->
+  <!-- profile page -->
   <main id="profile-page">
     <div class="inner">
+      <article id="profile">
+        <section id="profile__info">
+          <img src="./img/profile.png" alt="lee eunbin profile image" />
+          <h3 class="profile__name title">이은빈</h3>
+          <h4 class="profile_age title">1999.05.04 (만 23세)</h4>
+          <h4 class="profile__job title">WEB PUBLISHER</h4>
+        </section>
 
+        <section id="profile__about">
+          <section class="about__skill">
+            <span class="title">skill</span>
+
+            <ul class="skills">
+              <li>
+                <i class="fa-brands fa-html5"></i>
+                <span class="skill__name">html</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+              </li>
+
+              <li>
+                <i class="fa-brands fa-css3-alt"></i>
+                <span class="skill__name">css</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+              </li>
+
+              <li>
+                <i class="fa-brands fa-square-js"></i>
+                <span class="skill__name">javascript</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+              </li>
+
+              <li>
+                <i class="fa-brands fa-github"></i>
+                <span class="skill__name">github</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+                <span class="material-icons lignt-color">horizontal_rule</span>
+              </li>
+            </ul>
+          </section>
+
+          <section class="about__charactor">
+            <span class="title">charactor</span>
+            <ul class="charactors">
+              <li>
+                <span class="char__kor title">업무 몰입도</span>
+                <span class="char__eng">work engagement</span>
+              </li>
+              <li>
+                <span class="char__kor title">책임감</span>
+                <span class="char__eng">responsibility</span>
+              </li>
+
+              <li>
+                <span class="char__kor title">계획</span>
+                <span class="char__eng">planning</span>
+              </li>
+
+              <li>
+                <span class="char__kor title">꼼꼼함</span>
+                <span class="char__eng">punctuality</span>
+              </li>
+
+              <li>
+                <span class="char__kor title">융통성</span>
+                <span class="char__eng">flexibility</span>
+              </li>
+
+              <li>
+                <span class="char__kor title">열정</span>
+                <span class="char__eng">passion</span>
+              </li>
+
+              <li>
+                <span class="char__kor title">집중력</span>
+                <span class="char__eng">concentration</span>
+              </li>
+            </ul>
+          </section>
+        </section>
+      </article>
+
+      <article id="introduce"></article>
     </div>
   </main>
 </body>
