--- a/index.html
+++ b/index.html
@@ -193,7 +193,25 @@
         </section>
       </article>
 
-      <article id="introduce"></article>
+      <article id="introduce">
+        <section class="inroduce__contents">
+          안녕하세요!<br>
+          디자인과 개발 사이에서 서로를 이어주는 튼튼한 다리가 될 신입 웹 퍼블리셔 이은빈입니다.
+          <br><br>
+          노트에 레이아웃을 스케치하고, 이를 web에 구현하기 위한 첫 단계인 html 마크업을 할 때에는 큰 박스부터 작은 박스까지 어떤 태그를 사용할지 element에 어떤 이름을 붙일지 고민하는 과정이
+          너무 즐겁습니다.
+          <br><br>
+          css를 통해 배치하고 꾸며주면서 실시간으로 아름답게 변화해가는 과정을 보면 희열감도 느껴집니다! javascript의 짧은 코드로 요소들이 움직일 때면
+          신기해하며 행복하게 공부하고 있답니다.
+          <br><br>
+          저의 목표는 남녀노소 그리고 연령에 상관없이 모든 사람들이 접근하기 쉬운 사이트를 만들어내는 것입니다. 모든 기능에 접근하기 쉬워 사용자들이 헷갈리지 않고 다양한 기능을 활용할 수 있도록 활발한
+          사이트를 만들어내겠습니다.
+        </section>
+
+        <!-- <section class="introduce__title">
+          <img src="./img/introduce_title.png" alt="about LEE EUNBIN" />
+        </section> -->
+      </article>
     </div>
   </main>
 </body>
