contact, footer 완성

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </span>
       </header>
 
-      <nav id="side__menu" class="hidden">
+      <aside id="side__menu" class="hidden">
         <ul>
           <span class="material-icons">
             clear
@@ -55,7 +55,7 @@
           <li>Projects</li>
           <li>Contact</li>
         </ul>
-      </nav>
+      </aside>
 
       <img src="./img/eunbin_light.png" alt="smart eunbin" class="img fade-in floating me-smart" />
 
@@ -197,7 +197,7 @@
       <article id="introduce">
         <section class="inroduce__contents">
           <p>
-            안녕하세요!<br>
+            안녕하세요! 👋🏻<br>
             디자인과 개발 사이에서 서로를 이어주는 튼튼한 다리가 될 신입 웹 퍼블리셔 이은빈입니다.
             저는 대학을 졸업 후 제가 좋아하는 일에 대해 고민하는 과정에서
             눈이 즐겁게 일할 수 있는 퍼블리싱에 매력을 느껴 공부하고 있습니다.
@@ -210,7 +210,7 @@
             javascript의 짧은 코드로 요소들이 움직일 때면 신기해하며 행복하게 공부하고 있답니다.
             <br><br>
             저의 목표는 남녀노소 그리고 연령에 상관없이 모든 사람들이 접근하기 쉬운 사이트를 만들어내는 것입니다.
-            모든 기능에 접근하기 쉬워 사용자들이 헷갈리지 않고 다양한 기능을 활용할 수 있는 활발한 사이트를 만들어내겠습니다.
+            모든 기능에 접근하기 쉬워 사용자들이 헷갈리지 않고 다양한 기능을 활용할 수 있는 활발한 사이트를 만들어내겠습니다.🤍
           </p>
         </section>
 
@@ -223,6 +223,45 @@
       </article>
     </div>
   </main>
+
+
+  <!-- PROJECT -->
+
+
+  <!-- CONTACT -->
+  <main id="contact">
+    <div class="inner">
+      <h2 class="contact__title">CONTACT</h2>
+      <article class="contact__detail">
+
+
+        <section class="contact__mail">
+          <span class="material-icons">
+            email
+          </span>
+
+          <span class="email-address">
+            dmsqlsdl54@naver.com
+          </span>
+        </section>
+
+        <section class="contact__image">
+          <img src="./img/contact.png" alt="contact me" />
+        </section>
+      </article>
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="inner">
+      <span class="copyright">
+        &copy;
+        <span class="year"></span>.
+        Lee Eunbin All Rights Reserved.
+      </span>
+    </div>
+  </footer>
 </body>
 
 </html>
