--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <main id="first-page">
     <div class="inner">
 
-      <header id="menu__icon">
+      <!-- <header id="menu__icon">
         <span class="material-icons">
           menu
         </span>
@@ -55,7 +55,7 @@
           <li>Projects</li>
           <li>Contact</li>
         </ul>
-      </aside>
+      </aside> -->
 
       <img src="./img/eunbin_light.png" alt="smart eunbin" class="img fade-in floating me-smart" />
 
