project main page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   <!-- scrollMagic -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+  <!-- swiper -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
   <script defer src="./js/main.js"></script>
 </head>
@@ -226,12 +229,128 @@
 
 
   <!-- PROJECT -->
+  <main id="project">
+    <div class="inner">
+      <h2 class="project__title title">MY PROJECTS</h2>
+
+      <!-- web project -->
+      <h4 class="web__title title">
+        web projects
+      </h4>
+
+      <article class="project__web">
+        <section class="web__starbucks project__img">
+          <div class="color-opacity hidden">
+            <span class="material-icons">
+              search
+            </span>
+            <span class="img__title">
+              Starbucks clone coding
+            </span>
+          </div>
+
+        </section>
+
+        <section class="web__poolyou project__img">
+          <div class="color-opacity hidden">
+            <span class="material-icons">
+              search
+            </span>
+            <span class="img__title">
+              POOLyou website
+            </span>
+          </div>
+        </section>
+      </article>
+
+
+      <!-- javascript project -->
+      <h4 class="web__title title">
+        JavaScript projects
+      </h4>
+
+      <article class="project__js">
+        <section class="js__momentum project__img">
+          <div class="color-opacity hidden">
+            <span class="material-icons">
+              search
+            </span>
+            <span class="img__title">
+              Momentum
+            </span>
+          </div>
+
+        </section>
+
+        <section class="js__shopping project__img">
+          <div class="color-opacity hidden">
+            <span class="material-icons">
+              search
+            </span>
+            <span class="img__title">
+              Shopping-mall mini game
+            </span>
+          </div>
+        </section>
+
+        <section class="js__canvas project__img">
+          <div class="color-opacity hidden">
+            <span class="material-icons">
+              search
+            </span>
+            <span class="img__title">
+              Drawing board
+            </span>
+          </div>
+        </section>
+      </article>
+
+      <!-- javascript project -->
+      <!-- <article class="swiper">
+        <section class="swiper-wrapper">
+          <section class="swiper-slide">
+
+            <div class="project__img">
+              <span class="material-icons">
+                search
+              </span>
+              <span class="img__title">
+                Momentum
+              </span>
+            </div>
+
+            <div class="project__img">
+              <span class="material-icons">
+                search
+              </span>
+              <span class="img__title">
+                Drawing board
+              </span>
+            </div>
+
+            <div class="project__img">
+              <span class="material-icons">
+                search
+              </span>
+              <span class="img__title">
+                Shopping mini game
+              </span>
+            </div>
+
+          </section>
+        </section>
+      </article> -->
+
+    </div>
+  </main>
+
+
 
 
   <!-- CONTACT -->
   <main id="contact">
     <div class="inner">
-      <h2 class="contact__title">CONTACT</h2>
+      <h2 class="contact__title title">CONTACT</h2>
       <article class="contact__detail">
 
 
@@ -251,6 +370,7 @@
       </article>
     </div>
   </main>
+
 
   <!-- FOOTER -->
   <footer>
