project 상세 페이지 연결

--- a/index.html
+++ b/index.html
@@ -43,27 +43,9 @@
   <main id="first-page">
     <div class="inner">
 
-      <!-- <header id="menu__icon">
-        <span class="material-icons">
-          menu
-        </span>
-      </header>
-
-      <aside id="side__menu" class="hidden">
-        <ul>
-          <span class="material-icons">
-            clear
-          </span>
-          <li>Profile</li>
-          <li>Projects</li>
-          <li>Contact</li>
-        </ul>
-      </aside> -->
-
       <img src="./img/eunbin_light.png" alt="smart eunbin" class="img fade-in floating me-smart" />
 
       <h2 id="who-am-i"><em>Who am I ?</em></h2>
-      <!-- 문구는 더 생각해보자 -->
       <h1 class="fade-in" id="hello">
         안녕하세요.<br>
         능동적인 <strong>웹 퍼블리셔</strong>를 지향하는<br>
@@ -71,8 +53,6 @@
       </h1>
 
       <img src="./img/eunbin_hi.png" alt="Hi" class="img fade-in floating me-shake" />
-
-
 
     </div>
   </main>
@@ -239,7 +219,7 @@
       </h4>
 
       <article class="project__web">
-        <section class="web__starbucks project__img">
+        <a href="./html/starbucks.html" class="web__starbucks project__img">
           <div class="color-opacity hidden">
             <span class="material-icons">
               search
@@ -249,9 +229,9 @@
             </span>
           </div>
 
-        </section>
+        </a>
 
-        <section class="web__poolyou project__img">
+        <a href="./html/poolyou.html" class="web__poolyou project__img">
           <div class="color-opacity hidden">
             <span class="material-icons">
               search
@@ -260,7 +240,7 @@
               POOLyou website
             </span>
           </div>
-        </section>
+        </a>
       </article>
 
 
@@ -270,7 +250,7 @@
       </h4>
 
       <article class="project__js">
-        <section class="js__momentum project__img">
+        <a href="./html/momentum.html" class="js__momentum project__img">
           <div class="color-opacity hidden">
             <span class="material-icons">
               search
@@ -280,20 +260,20 @@
             </span>
           </div>
 
-        </section>
+        </a>
 
-        <section class="js__shopping project__img">
+        <a href="./html/shopping.html" class="js__shopping project__img">
           <div class="color-opacity hidden">
             <span class="material-icons">
               search
             </span>
             <span class="img__title">
-              Shopping-mall mini game
+              Shopping-mall game
             </span>
           </div>
-        </section>
+        </a>
 
-        <section class="js__canvas project__img">
+        <a href="./html/canvas.html" class="js__canvas project__img">
           <div class="color-opacity hidden">
             <span class="material-icons">
               search
@@ -302,49 +282,11 @@
               Drawing board
             </span>
           </div>
-        </section>
+        </a>
       </article>
-
-      <!-- javascript project -->
-      <!-- <article class="swiper">
-        <section class="swiper-wrapper">
-          <section class="swiper-slide">
-
-            <div class="project__img">
-              <span class="material-icons">
-                search
-              </span>
-              <span class="img__title">
-                Momentum
-              </span>
-            </div>
-
-            <div class="project__img">
-              <span class="material-icons">
-                search
-              </span>
-              <span class="img__title">
-                Drawing board
-              </span>
-            </div>
-
-            <div class="project__img">
-              <span class="material-icons">
-                search
-              </span>
-              <span class="img__title">
-                Shopping mini game
-              </span>
-            </div>
-
-          </section>
-        </section>
-      </article> -->
 
     </div>
   </main>
-
-
 
 
   <!-- CONTACT -->
