--- a/html/canvas.html
+++ b/html/canvas.html
@@ -16,23 +16,40 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic&family=Roboto&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="../css/canvas.css" />
+  <link rel="stylesheet" href="../css/detail.css" />
 </head>
 
 <body>
   <main id="main__page">
     <div class="inner">
-      <h1 class="main__title">
+
+      <h1 class="main__title title">
         DRAWING BOARD<br>
         WEBSITE
       </h1>
-      <h3 class="version">
+
+      <h3 class="version title">
         only computer
       </h3>
-      <a href="https://eunbinnie.github.io/meme_maker/">
-        사이트 바로가기
-      </a>
+
+      <button>
+        <a href="https://eunbinnie.github.io/meme_maker/">
+          사이트 바로가기
+        </a>
+      </button>
+
+      <h2 class="about title">ABOUT THE PROJECT</h2>
+
+      <span class="lecture">
+        강의 | Nomad Coders 바닐라 JS로 그림 앱 만들기
+      </span>
+
+      <span class="period">
+        기간 | 2023.02.21 ~ 2023.03.02
+      </span>
+
       <img src="../img/canvas-main.png" alt="canvas whole page" class="whole__page" />
+
     </div>
   </main>
 </body>
