shopping mini game detail page 완성

--- a/html/shopping.html
+++ b/html/shopping.html
@@ -17,7 +17,7 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="../css/common.css" />
-  <link rel="stylesheet" href="../css/momentum.css" />
+  <link rel="stylesheet" href="../css/shopping.css" />
 </head>
 
 <body>
@@ -41,14 +41,12 @@
 
           <section class="about__contents">
             <span class="lecture">
-              강의 | Nomad Coders 바닐라 JS 2주 완성반 (졸업작품)
+              강의 | HTML, CSS, JavaScript를 이용해 게임을 만들기
             </span>
 
             <span class="period">
-              기간 | 2023.02.03 ~ 2023.02.17
+              기간 | 2023.03.06
             </span>
-
-            <span class="contribution">기여도 | 100%</span>
           </section>
         </section>
 
@@ -56,8 +54,8 @@
       </article>
 
       <section class="info__img">
-        <img src="../img/momentum_mobile.jpg" alt="" class="img__mobile" />
-        <img src="../img/momentum_com.png" alt="momentum com ver whole page" class="whole__page" />
+        <img src="../img/shopping_main.jpeg" alt="shopping mini game com ver whole page" class="whole__page filter" />
+        <img src="../img/shopping_filter.jpeg" alt="shopping mini game com filtering" class="whole__page home" />
       </section>
 
     </div>
