--- a/html/momentum.html
+++ b/html/momentum.html
@@ -41,7 +41,13 @@
 
           <section class="about__contents">
             <span class="lecture">
-              강의 | Nomad Coders 바닐라 JS 2주 완성반 (졸업작품)
+              강의 | Nomad Coders 바닐라 JS 2주 완성반 - 졸업작품
+            </span>
+
+            <span class="explain">
+              설명 |<br>
+              localStorage 사용하여 데이터 받아오고 저장하기<br>
+              geolocation 읽어와서 날씨 출력하기 (open weather api)
             </span>
 
             <span class="period">
