포트폴리오 1차 완성

--- a/html/shopping.html
+++ b/html/shopping.html
@@ -32,7 +32,7 @@
           </h1>
           <h3 class="version title">COMPUTER, TABLET</h3>
           <button>
-            <a href="https://eunbinnie.github.io/challenge_goals/">
+            <a href="https://eunbinnie.github.io/online_shopping/">
               사이트 바로가기
             </a>
           </button>
