--- a/index.html
+++ b/index.html
@@ -292,10 +292,10 @@
   <!-- CONTACT -->
   <main id="contact">
     <div class="inner">
-      <h2 class="contact__title title">CONTACT</h2>
+      <h2 class="contact__title title">
+        THANKS FOR WATCHING!<br>
+        CONTACT</h2>
       <article class="contact__detail">
-
-
         <section class="contact__mail">
           <span class="material-icons">
             email
