--- a/html/poolyou.html
+++ b/html/poolyou.html
@@ -49,6 +49,8 @@
               2022.11.17 ~ 2022.11.24 (반응형),<br>
               2023.02.14 ~ 2023.03.20(JS)
             </span>
+
+            <span class="contribution">기여도 | 100%</span>
           </section>
         </section>
 
