--- a/index.html
+++ b/index.html
@@ -297,13 +297,26 @@
         CONTACT</h2>
       <article class="contact__detail">
         <section class="contact__mail">
-          <span class="material-icons">
-            email
-          </span>
+          <section class="email">
+            <span class="material-icons">
+              email
+            </span>
 
-          <span class="email-address">
-            dmsqlsdl54@naver.com
-          </span>
+            <span class="email-address">
+              dmsqlsdl54@naver.com
+            </span>
+          </section>
+
+
+          <section class="github">
+            <a href="https://github.com/eunbinnie">
+              <i class="fa-brands fa-github"></i>
+            </a>
+
+            <span class="github-address">
+              welcome to my github
+            </span>
+          </section>
         </section>
 
         <section class="contact__image">
